coloured lines cells correctly aligned now

--- a/wp-content/themes/klzii/main.css
+++ b/wp-content/themes/klzii/main.css
@@ -2014,6 +2014,7 @@ li.comment {
 .coloredBox-line .item {
   display: inline-block;
   width: 48%;
+  height: auto !important;
   margin-left: 1.5%;
   margin-bottom: 15px;
   padding: 10px 35px 25px;
@@ -3860,6 +3861,13 @@ i, .icon {
   .entry-content .wrap .iconBox-text .item {
     flex: 1 1 49.3%;
     height: auto !important;
+  }
+  .coloredBox-line {
+    display: flex;
+    flex-flow: row wrap;
+  }
+  .coloredBox-line .item {
+    flex: 1 1 48%;
   }
 }
 @media (max-device-width: 767px) and (orientation: portrait) {
