--- a/wp-content/themes/klzii/scss/_site-content.scss
+++ b/wp-content/themes/klzii/scss/_site-content.scss
@@ -417,6 +417,7 @@
 	.item {
 		display: inline-block;
 		width: 48%;
+		height: auto !important;
 		margin-left: 1.5%;
 		margin-bottom: 15px;
 		padding: 10px 35px 25px;
